--- a/src/index.css
+++ b/src/index.css
@@ -245,6 +245,7 @@ ul.link_list {
 }
 .week {
   margin: auto;
+  width: 50%;
   margin-block-end: 3rem;
 }
 .week thead td {
@@ -255,6 +256,16 @@ ul.link_list {
   cursor: pointer;
   transition: all 0.2s ease-out;
   background-color: white;
+  width: 4rem;
+  height: 2rem;
+
+}
+.week tbody .day .period_cycle_empty td{
+  cursor: pointer;
+  transition: all 0.2s ease-out;
+  background-color: rgb(247, 247, 247);
+  width: 4rem;
+  height: 2rem;
 
 }
 
@@ -262,4 +273,16 @@ ul.link_list {
   background-color: #1D6295;
   color: white;
   transition: all 0.5s ease-in;
+}
+
+/* || TIMETABLE PRINT */
+
+.print_button {
+  text-align: center;
+  background-color: white;
+  border: 2px solid rgb(124,124,124);
+  cursor: pointer;
+  width: 10rem;
+  height: 4rem;
+  
 }
